# mixed-platonic

./: .gitignore  README.md  out  pyproject.toml  scratch.txt
census-manifests/: long_cusp.json  short_cusp_12.json  short_cusp_24.json
src/: analyze.py  analyze_census.py  backfill_census.py  bar.py  base.py  binary_loop.py  bracelets.py  construct.py  construct_census.py  construction.py  cusp_geometry.py  cyclotomic.py  draw.py  draw_cusp.py  env.py  examples.py  export_census_csv.py  export_regina.py  finger_cusp.py  gather_census.py  generate-census.py  generate.py  generate_census.py  long_cusp.py  main.py  pattern_restriction.py  reset_env.py  run_workers.sh  search.py  search_census.py  solve.py  solve_census.py  solver.py  stack.py  trace_table.py  visualize_census.py  worker.py
src/old/: cusp.py  cusp_tile.py  find_manifolds.py  foo.py  main_old.py  mixed_platonic.py  mixed_platonic_old.py  mixed_platonic_old_old.py  stack.py
tests/: broken_test_export_regina.py  broken_test_stack.py  test_base.py  test_bracelets.py  test_construction.py  test_cusp_geometry.py  test_cyclotomic.py  test_draw_cusp.py  test_export_regina.py  test_finger_cusp.py  test_long_cusp.py  test_pattern_restriction.py  test_solver.py  test_stack.py
