[tool.poetry]
name = "mixed-platonic"
version = "0.1.0"
description = ""
authors = ["Nick Jordan <njordan@d.umn.edu>"]
readme = "README.md"

[tool.poetry.scripts]
test = "pytest:main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.3"
sympy = "^1.13.3"
graphviz = "^0.20.3"
regina = "^7.3.1"
pycairo = "^1.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ptpython = "^3.0.29"
ipython = "^8.32.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
